# blogs

./: .editorconfig  .gitignore  Makefile  _config.yml
.dev/: Dockerfile-pip-multi  Dockerfile-pip-single  Dockerfile-uv-multi  Dockerfile-uv-single  Dockerfile.1  Dockerfile.2  Dockerfile.3  Dockerfile.pip  pyproject.toml  requirements-dev.txt  requirements-heavy.txt  requirements.txt
.dev/src/: .dockerignore  main.py
.github/workflows/: pages-deploy.yml
_data/: contact.yml  share.yml
_posts/: 2025-03-01-first-post.md  2025-03-01-test-post-without-comments.md  2025-03-02-how-it-started.md  2025-03-14-dotfiles-management.md  2025-05-01-tuples-filter-on-multi-columns-with-django-orm.md  2025-05-22-adapt-dockerfile-with-uv.md
_tabs/: about.md
assets/img/posts/2025-05-01-tuples-filter-on-multi-columns-with-django-orm/: experiments_200runs_10fake_1000size_3cols.json
